nav bar added comple and its responsive

--- a/index.html
+++ b/index.html
@@ -12,8 +12,16 @@
 
 </head>
 <body>
-    
-<h1>NETFLIX</h1>
+<header>
+
+   <img class="logo" src="/img/iconlogo.png" alt="logo">
+
+     <div class="topbuttons">
+    <button class="langage">English</button>
+    <button class="signin">Sign In</button>  
+    </div>
+</header>    
+
 
 
 </body>
