--- a/index.html
+++ b/index.html
@@ -12,15 +12,16 @@
 
 </head>
 <body>
-<header>
-
-   <img class="logo" src="/img/iconlogo.png" alt="logo">
-
-     <div class="topbuttons">
+    <div class="topsection">
+    <div class="header">
+     <img class="logo" src="/img/iconlogo.png" alt="logo">
+    <div class="topbuttons">
     <button class="langage">English</button>
     <button class="signin">Sign In</button>  
     </div>
-</header>    
+    </header>  
+ 
+    </div>
 
 
 
