compleed section one both responce and other

--- a/index.html
+++ b/index.html
@@ -13,15 +13,24 @@
 </head>
 <body>
     <div class="topsection">
-    <div class="header">
-     <img class="logo" src="/img/iconlogo.png" alt="logo">
-    <div class="topbuttons">
-    <button class="langage">English</button>
-    <button class="signin">Sign In</button>  
+        <div class="header">
+             <img class="logo" src="/img/iconlogo.png" alt="logo">
+                <div class="topbuttons">
+                    <button class="langage">English</button>
+                    <button class="signin" > <a class="signlink" href="#">Sign In</a></button>  
+                </div>
+        </div>  
+         
+        <h1 class="sectiontextone"> Unlimited movies, TV <br> shows and more.</h1>
+        <h3 class="sectiontexttwo">Watch anywhere. Cancel anytime.</h3>
+        <h4 class="sectiontextthree">Ready to watch? Enter your email to create or restart your membership.</h4>
+            <div class="search">
+                <input type="email"name="" placeholder="Email Adress">
+                <button class="getstarted" > <a class="getstartedlink" href="#">Get Started</a></button>  
+                
+            </div>
     </div>
-    </header>  
  
-    </div>
 
 
 
