--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 </head>
 <body>
-    <div class="topsection">
+    <section class="topsection">
         <div class="header">
              <img class="logo" src="/img/iconlogo.png" alt="logo">
                 <div class="topbuttons">
@@ -25,13 +25,40 @@
         <h3 class="sectiontexttwo">Watch anywhere. Cancel anytime.</h3>
         <h4 class="sectiontextthree">Ready to watch? Enter your email to create or restart your membership.</h4>
             <div class="search">
-                <input type="email"name="" placeholder="Email Adress">
+                <input type="email"name="" placeholder="Email Address">
                 <button class="getstarted" > <a class="getstartedlink" href="#">Get Started</a></button>  
                 
             </div>
-    </div>
- 
+        </section>
 
+    <section class="sectiontwo">
+        <div class="sectiondivtext">
+            <h1 class="twotext">
+                Enjoy on your TV.
+            </h1>
+            <h4 class="watch">
+                Watch on smart TVs, PlayStation, Xbox, Chromecast, Apple TV, Blu-ray players and more.
+            </h4>
+        </div>
+             <div class="sectiontwoimg">
+              <img  class="tvimage"src="img/tv.png" alt="tvimage">
+              </div>
+     </section>
+ 
+<section class="sectionthree">
+  
+  <div class="sectionthreediv">
+      <img class="mobilepic" src="img/mobile-0819.jpg" alt="mobile" srcset="">
+  </div>
+
+        <div  class="thirdtextdiv">
+             <h1 class="threetext">
+                Download your shows to watch offline.
+             </h1>
+             <p class="threepara">Save your favourites easily and always have something to watch.</p>
+        </div>
+
+</section>
 
 
 </body>
