comple all section now

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
                 <div class="topbuttons">
                     <button class="langage">English</button>
                     <button class="signin" > <a class="signlink" href="#">Sign In</a></button>  
-                </div>
-        </div>  
+                       </div>
+                    </div>  
          
         <h1 class="sectiontextone"> Unlimited movies, TV <br> shows and more.</h1>
         <h3 class="sectiontexttwo">Watch anywhere. Cancel anytime.</h3>
@@ -36,9 +36,9 @@
             <h1 class="twotext">
                 Enjoy on your TV.
             </h1>
-            <h4 class="watch">
-                Watch on smart TVs, PlayStation, Xbox, Chromecast, Apple TV, Blu-ray players and more.
-            </h4>
+                <h4 class="watch">
+                    Watch on smart TVs, PlayStation, Xbox, Chromecast, Apple TV, Blu-ray players and more.
+                </h4>
         </div>
              <div class="sectiontwoimg">
               <img  class="tvimage"src="img/tv.png" alt="tvimage">
@@ -60,6 +60,31 @@
 
 </section>
 
+<section class="sectionfour">
+
+    <div class="sectionfourdivtext">
+        <h1 class="twotext">Watch everywhere.</h1>
+        <h4 class="watch">Stream unlimited movies and TV shows on your phone, tablet, laptop, and TV.</h4>
+
+    </div>
+        <div class="sectionfourimgdiv">
+        <img class="tvimage" src="img/device-pile-in.png" alt="">
+        </div>
+
+</section>
+
+<section class="sectionfour">
+
+    <div class="sectionfourdivtext">
+        <h1 class="twotext">Watch everywhere.</h1>
+        <h4 class="watch">Stream unlimited movies and TV shows on your phone, tablet, laptop, and TV.</h4>
+
+    </div>
+        <div class="sectionfourimgdiv">
+        <img class="tvimage" src="img/device-pile-in.png" alt="">
+        </div>
+
+</section>
 
 </body>
 </html>
