--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 <body>
     <section class="topsection">
         <div class="header">
-             <img class="logo" src="/img/iconlogo.png" alt="logo">
+             
+             <img class="logo" src="/img/iconlogo.png" alt="">
                 <div class="topbuttons">
                     <button class="langage">English</button>
                     <button class="signin" > <a class="signlink" href="#">Sign In</a></button>  
